--- a/Projet 3 - Booki/css/style.css
+++ b/Projet 3 - Booki/css/style.css
@@ -1,12 +1,14 @@
 /****** General ***********/
 * {
     font-family: 'Raleway', sans-serif;
+    
 }
 
 :root {
     --main-color: #0065FC;
     --main-bg-color: #F2F2F2;
     --filter-bg-color: #DEEBFF;
+    
 }
 
 .fa-solid {
@@ -64,8 +66,6 @@ a {
 
 .header {
     display: flex;
-    /* flex-direction: column; */
-    align-items: baseline;
     justify-content: space-between;
 }
 
@@ -178,7 +178,7 @@ i {
   }
 
   .filter {
-    margin-bottom: 15px;
+    margin-top: 15px;
     display: flex;
     width: max-content;
   }
@@ -260,7 +260,7 @@ i {
 
 /****** Hebergements ***********/
 #hebergements {
-    width: 65%;
+    width: 66%;
 }
 .hebergements-title {
 width:max-content;
@@ -271,13 +271,17 @@ width:max-content;
     margin-bottom: 50px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
+}
+
+.hebergements-cards a {
+    width: 32%;
 }
 
 .hebergements-cards .card {
     margin: 5px;
-    height: 210px;
-    width:250px; /* Largeur fixe pour toutes les cartes */
+    height: 225px;
+    width:90%; /* Largeur fixe pour toutes les cartes */
 }
 
 .hebergements-cards img {
@@ -402,17 +406,20 @@ width: auto;
     justify-content: space-evenly;
 }
 
-.footer .article {
-    margin-bottom: 20px;
+.footer-txt {
+    list-style: none;
 }
-
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
 
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
 /* Media query pour les écrans max-width: 1024px */
-@media (max-width: 1024px) {
+@media (max-width: 1425px) {
+
+    .filter {
+        flex-direction: column;
+    }
     .hebergements-and-populaires {
         flex-direction: column;
     }
@@ -447,20 +454,20 @@ width: auto;
     }
     
     .activites-cards {
-        padding-top: 30px;
-        padding-bottom: 30px;
         display: flex;
         justify-content: space-around;
     }
     
     .activites-cards .card {
-        margin: 5px;
-        height: 210px;
-        width:180px; /* Largeur fixe pour toutes les cartes */
+        height: 70%;
+        width:90%; /* Largeur  pour toutes les cartes */
+    }
+    .activites-cards a {
+        width: 30%;
     }
     
     .activites-cards img {
-        height: 124px;
+        height: 80%;
         width: 100%;
         border-top-left-radius: 20px;
         border-top-right-radius: 20px;
@@ -473,7 +480,7 @@ width: auto;
 
 
 /* Small devices (phones, less than 768px) */
-@media (max-width: 767.98px) {
+@media (max-width: 768px) {
 
 
 
@@ -506,13 +513,14 @@ width: auto;
     /** PARTIE HEADER TITRE TEXTE ET SEARCH **/
 
     .header-title{
-        margin-left: 50px;
-        font-size: 2em;
+        font-size: 48px;
+        width: 100%;
     }
     .header-txt,
     .info {
-        margin-left: 100px;
-        font-size: 26px;
+        padding-left: 32px;
+        width: 100%;
+        font-size: 32px;
     }        
       label {
         font-size: 24px; /* Ajustez la taille de l'icône du formulaire selon vos préférences */
@@ -540,10 +548,10 @@ width: auto;
       .filter-content{
         display: grid;
         grid-template-columns: 200px 200px;
-        grid-column-gap: 50px;
+        grid-column-gap: 33%;
       }
       .emoji {
-        width: 250px;
+        width: 150%;
         justify-content: space-evenly;
         height: 100px;
       }
@@ -567,7 +575,6 @@ width: auto;
     .activites-cards,
     .footer-content{
         display: flex;
-        align-items: center;
         flex-direction: column;
         object-fit: cover;
     }
@@ -582,8 +589,15 @@ width: auto;
         width: 500px;
     }
 
+    .populaires .section-title {
+        font-size: 48px;
+    }
     .populaires-cards .card {
-        width: 200px;
-        height: 150px;
+        width: 330%;
+        height: 200px;
+    }
+    .populaires-cards img {
+        width: 50%;
+        height: 100%;
     }
 }
