--- a/Projet 3 - Booki/css/style.css
+++ b/Projet 3 - Booki/css/style.css
@@ -71,7 +71,7 @@ a {
 
 
 .header-img {
-    width: 80px;
+    width: 59px;
     object-fit: contain;
   }
 
@@ -88,7 +88,7 @@ a {
   }
   nav ul li {
     display: inline-block;
-    padding: 20px;
+    padding-right: 20px;
   }
   
   nav ul li a {
