--- a/Projet 3 - Booki/css/style.css
+++ b/Projet 3 - Booki/css/style.css
@@ -18,6 +18,7 @@
 body {
     display: flex;
     justify-content: center;
+    margin: 0;
 }
 
 .main-container {
@@ -83,32 +84,34 @@ a {
     margin-bottom:50px;
   }
   nav ul {
-    padding: 0;
     text-align: right;
     margin: 0;
   }
   nav ul li {
     display: inline-block;
-    padding: 10px;
+    padding-top: 16px;
+    width: 120px;
+    text-align: center;
   }
   
   nav ul li a {
     text-decoration: none;
     color: black;
   }
-  
-  nav ul li a:hover {
-    color: #0065fc;
-  }
-  
-  nav li a:hover, nav li a:focus {
+  nav ul li:hover a{
     color: #0065FC;
-    border-top: 2px solid #0065FC;
-    list-style-type: none;
-    text-align: center;
-    padding-top: 15px;
   }
 
+  nav li:hover, nav li:focus{
+    border-top: 2px solid #0065FC;
+    margin-bottom: 0px;
+    color: #0065FC;
+    padding-top: 14px;
+  }
+  .header-nav {
+    padding-top: 0px;
+  }
+  
 .header-txt,
 .header-title,
 .search {
@@ -691,6 +694,7 @@ width: auto;
         display: flex;
         text-align: center;
         width: 100%;
+        padding-left: 0px;
     }
     nav ul li  {
         padding: 20px 0;
@@ -703,31 +707,17 @@ width: auto;
         margin: 10px 0;
         border-bottom:  2px solid #f2f2f2;  
     }
-    nav ul li a:hover , nav ul li a:focus {
-        padding: 20px 0;
+    nav ul li:hover , nav ul li:focus {
         border-top: none;
         border-bottom: 2px solid #0065FC;
+        margin-bottom: 10px;
+        margin-top: 16px;
     } 
     
     .header-img {
         padding-top: 20px;
-        padding-left: 41%;
+        padding-left: 43%;
         padding-bottom: 20px;
     }
 
 }
-
-/*  
-    18/11
-    
-    Modification bouton filtre partie desktop 
-    Modification de l'icone i 
-    Modification de la nav desktop qui était pas a la bonne hauteur 
-    Modification de la hauteur du texte dans les card Activites
-    Modification du footer ajout de l'espace entre chaque li ajoute d'un margin top 
-    Modification du bouton recherche en mobile ajout du box shadow
-    Modification nav en mobile a améliorer encore
-    Modification de quelques erreur dans le css ( consigne en doublons )
-
-
-    Passez au W3C 
